--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 	--primary_tone: #d1eafa;
 	--secondary: #e62a66;
 
+	/* TODO: swap for dark mode, and make sure all instances of "black" and "white" change to these vars! */
 	--background: #ffffff;
 	--foreground: #171717;
 }
