--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,6 @@
 	--primary_tint: #4e9ccc;
 	--primary_tint_2: #4481a7;
 	--primary_tint_3: #25465b;
-	--primary_tone: #d1eafa;
 	--secondary: #e62a66;
 
 	/* override toastify css variables */
@@ -15,23 +14,22 @@
 	--toastify-color-progress-light: #171717;
 	--toastify-color-progress-bgo: 0;
 
-	--background: #ffffff;
-	--foreground: #171717;
+	--main_white: #ffffff;
+	--main_black: #171717;
+}
+
+:root.dark {
+	color: var(--main_white);
+	background: var(--main_black);
 }
 
 nextjs-portal {
 	@apply hidden; /* Hides the element */
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
-	}
-}
-
 body {
-	color: var(--foreground);
-	background: var(--background);
+	color: var(--main_black);
+	background: var(--main_white);
+	/* transition: background-color 0.3s ease, color 0.3s ease; */
 	font-family: Arial, Helvetica, sans-serif;
 }
